force-app/main/default/objects/ssot__DocumentClause__dlm/fields/ssot__Format__c.field-meta.xml
<CustomField>
    <fullName>ssot__Format__c</fullName>
    <label>Format</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Format</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>