force-app/main/default/objects/ssot__DocumentClause__dlm/fields/ssot__IsAlternateClause__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsAlternateClause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Alternate Clause</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsAlternateClause</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>