force-app/main/default/objects/ssot__DocumentClause__dlm/fields/ssot__Language__c.field-meta.xml
<CustomField>
    <fullName>ssot__Language__c</fullName>
    <label>Language</label>
    <length>50</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Language</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>