force-app/main/default/objects/ssot__DocumentClause__dlm/fields/ssot__Region__c.field-meta.xml
<CustomField>
    <fullName>ssot__Region__c</fullName>
    <label>Region</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Region</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>