force-app/main/default/objects/ssot__DocumentClause__dlm/fields/ssot__rel_1731658760311_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658760311_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocumentClause_DocumentClauseSetId_m_rel</label>
    <referenceTo>ssot__DocumentClauseSet__dlm</referenceTo>
    <relationshipLabel>DocumentClause_DocumentClauseSetId_m_rel</relationshipLabel>
    <relationshipName>rel_1731658760311_end</relationshipName>
    <type>Lookup</type>
</CustomField>