force-app/main/default/objects/ssot__DocumentClause__dlm/fields/ssot__ReportingYearName__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReportingYearName__c</fullName>
    <label>Reporting Year</label>
    <length>50</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReportingYearName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>