force-app/main/default/objects/ssot__DocumentClause__dlm/fields/ssot__ValidEndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ValidEndDate__c</fullName>
    <label>Valid End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ValidEndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>