force-app/main/default/objects/ssot__DocumentClause__dlm/fields/ssot__ValidStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ValidStartDate__c</fullName>
    <label>Valid Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ValidStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>